[gd_scene load_steps=3 format=3 uid="uid://oh7w6vaf3lan"]

[ext_resource type="Script" uid="uid://mfm250u2xo4h" path="res://multiplayer.gd" id="1_o4y1c"]

[sub_resource type="Theme" id="Theme_o4y1c"]
RichTextLabel/constants/outline_size = 8

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_o4y1c")
script = ExtResource("1_o4y1c")

[node name="RichTextLabel" type="RichTextLabel" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 0.061728396
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
text = "Pee Game"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="MarginContainer2" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_right = 1.0
anchor_bottom = 0.9999999
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50
metadata/_edit_use_anchors_ = true

[node name="GridContainer" type="GridContainer" parent="MarginContainer2"]
layout_mode = 2
columns = 2

[node name="Label" type="Label" parent="MarginContainer2/GridContainer"]
layout_mode = 2
text = "Display name:"

[node name="NameEntry" type="LineEdit" parent="MarginContainer2/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="Label2" type="Label" parent="MarginContainer2/GridContainer"]
layout_mode = 2
text = "Player color:"

[node name="ColorPicker" type="ColorPickerButton" parent="MarginContainer2/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Pick"
color = Color(1, 1, 1, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.5
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="JoinBar" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ServerAddressEntry" type="LineEdit" parent="MarginContainer/VBoxContainer/JoinBar"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Server IP"

[node name="JoinButton" type="Button" parent="MarginContainer/VBoxContainer/JoinBar"]
layout_mode = 2
text = "Join game"

[node name="HostButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Host
"

[node name="StartGameButton" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Start game"

[connection signal="pressed" from="MarginContainer/VBoxContainer/JoinBar/JoinButton" to="." method="_on_join_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HostButton" to="." method="_on_host_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/StartGameButton" to="." method="_on_start_game_pressed"]
